Adjusting token call

--- a/.github/workflows/create-7z.yml
+++ b/.github/workflows/create-7z.yml
@@ -47,5 +47,4 @@ jobs:
           repository: spruceUI/spruceOSNightlies
           draft: false
           prerelease: true
-        env:
-          GITHUB_TOKEN: ${{ secrets.PAT_TOKEN }}
+          token: ${{ secrets.PAT_TOKEN }}
