More permission adjustments

--- a/.github/workflows/create-7z.yml
+++ b/.github/workflows/create-7z.yml
@@ -32,12 +32,7 @@ jobs:
 
       - name: Create 7z archive
         run: |
-          7z a -t7z -mx=9 "spruceV${{ steps.get_version.outputs.version }}.7z" * \
-            -xr!.git* \
-            -x!.gitignore \
-            -x!.gitattributes \
-            -x!create_spruce_release.bat \
-            -x!create_spruce_release.sh
+          7z a -t7z -mx=9 "spruceV${{ steps.get_version.outputs.version }}.7z" README.md
 
       - name: Create Release
         uses: softprops/action-gh-release@v1
@@ -46,6 +41,7 @@ jobs:
           tag_name: v${{ steps.get_version.outputs.version }}
           repository: spruceUI/spruceOSNightlies
           draft: false
-          prerelease: true
+          prerelease: false
+          token: ${{ secrets.PAT_TOKEN }}
         env:
           GITHUB_TOKEN: ${{ secrets.PAT_TOKEN }}
