--- a/.github/workflows/create-7z.yml
+++ b/.github/workflows/create-7z.yml
@@ -1,10 +1,10 @@
 name: Create 7z
-#When
+
 on:
-#  schedule:
-#    - cron: '40 3 * * *'
-  push:
-    branches: [ ReleaseFileAction ]
+  schedule:
+    - cron: '20 5 * * *'
+#  push:
+#    branches: [ Development ]
 
 jobs:
   create-7z:
