Adding new nightly support to OTAs, added update checker function to detect updates, improvements to OTA

--- a/App/OTA/config.json
+++ b/App/OTA/config.json
@@ -1,5 +1,5 @@
 {
-  "label": "Check for  Update",
+  "label": "Check for Updates",
   "icon": "/mnt/SDCARD/Themes/SPRUCE/Icons/App/firmwareupdate.png",
   "launch": "launch.sh",
   "description": "OTA Updater"
