--- a/.github/workflows/create-7z.yml
+++ b/.github/workflows/create-7z.yml
@@ -2,7 +2,7 @@ name: Create 7z
 
 on:
   schedule:
-    - cron: '10 10 * * *'
+    - cron: '17 17 * * *'
 #  push:
 #    branches: [ Development ]
 
@@ -15,6 +15,7 @@ jobs:
       - uses: actions/checkout@v4
         with:
           ref: Development
+          fetch-depth: 0
 
       - name: Install 7zip
         run: |
@@ -29,6 +30,8 @@ jobs:
             exit 1
           fi
           echo "version=$(cat spruce/spruce)-$(date '+%Y%m%d')" >> "$GITHUB_OUTPUT"
+          # Get last commit hash and save to file
+          git rev-parse HEAD > commit_hash.txt
 
       - name: Check for commits
         id: check_commits
@@ -53,7 +56,10 @@ jobs:
             -x!.gitignore \
             -x!.gitattributes \
             -x!create_spruce_release.bat \
-            -x!create_spruce_release.sh
+            -x!create_spruce_release.sh \
+            -x!commit_hash.txt
+          # Add the commit hash file separately to place it at the root
+          7z u "spruceV${{ steps.get_version.outputs.version }}.7z" commit_hash.txt
 
       - name: Create Release
         uses: softprops/action-gh-release@v1
