--- a/.github/workflows/create-7z.yml
+++ b/.github/workflows/create-7z.yml
@@ -3,6 +3,7 @@ name: Create 7z
 on:
   schedule:
     - cron: '10 10 * * *'
+  workflow_dispatch:
 #  push:
 #    branches: [ Development ]
 
@@ -51,8 +52,9 @@ jobs:
 
       - name: Create 7z archive
         run: |
-          7z a -t7z -mx=9 "spruceV${{ steps.get_version.outputs.version }}.7z" * \
-            -xr!.git* \
+          7z a -t7z -mx=9 "spruceV${{ steps.get_version.outputs.version }}.7z" * .tmp_update \
+            -xr!.git \
+            -xr!.github \
             -x!.gitignore \
             -x!.gitattributes \
             -x!create_spruce_release.bat \
