Update ota updater app description

--- a/App/OTA/config.json
+++ b/App/OTA/config.json
@@ -2,5 +2,5 @@
   "label": "Check for Updates",
   "icon": "/mnt/SDCARD/Themes/SPRUCE/Icons/App/firmwareupdate.png",
   "launch": "launch.sh",
-  "description": "OTA Updater"
+  "description": "Check for and apply updates over the Internet"
 }
