--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -25,32 +25,16 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y p7zip-full
 
-      - name: Get version and date
+      - name: Get version
         id: get_version
         run: |
           if [ ! -f "spruce/spruce" ]; then
             echo "Error: spruce/spruce file not found"
             exit 1
           fi
-          echo "version=$(cat spruce/spruce)-$(date '+%Y%m%d')" >> "$GITHUB_OUTPUT"
+          echo "version=$(cat spruce/spruce)" >> "$GITHUB_OUTPUT"
           # Get last commit hash and save to file
           git rev-parse HEAD > commit_hash.txt
-
-      - name: Check for commits
-        id: check_commits
-        run: |
-          # Get all commits from last 24 hours
-          COMMITS=$(git log --since="24 hours ago" --pretty=format:'- %s (%an)%n')
-          if [ -z "$COMMITS" ]; then
-            echo "No commits in the last 24 hours"
-            exit 1
-          fi
-          # Write commits to output
-          {
-            echo "commits<<EOF"
-            echo "$COMMITS"
-            echo "EOF"
-          } >> "$GITHUB_OUTPUT"
 
       - name: Create archives
         run: |
@@ -78,20 +62,38 @@ jobs:
 
       - name: Create Release
         uses: softprops/action-gh-release@v1
-        if: success() && steps.check_commits.outcome == 'success'
+        if: success()
         with:
           files: |
             spruceV${{ steps.get_version.outputs.version }}.7z
             spruceV${{ steps.get_version.outputs.version }}.zip
           tag_name: v${{ steps.get_version.outputs.version }}
-          body: ${{ steps.check_commits.outputs.commits }}
+          body: |
+            ## Updating
+
+            ******
+
+            Check out our repo of various [free games and ports](https://github.com/spruceUI/Ports-and-Free-Games/releases/latest)!
+
+            ******
+
+            Spruce ${{ steps.get_version.outputs.version }}
+
+
+            ## Changes/Additions:
+
+
+            ## Bug Fixes/Removals:
+
+
+            Credits/Thanks
           repository: spruceUI/spruceOS
           token: ${{ secrets.PAT_TOKEN }}
           draft: true
           prerelease: true
 
       - name: Update OTA file
-        if: success() && steps.check_commits.outcome == 'success'
+        if: success()
         env:
           GH_TOKEN: ${{ secrets.PAT_TOKEN }}
         run: |
