--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -49,7 +49,7 @@ jobs:
             -x!commit_hash.txt
           7z u "spruceV${{ steps.get_version.outputs.version }}.7z" commit_hash.txt
 
-          # Create zip archive with same exclusions
+          # Create zip archive with same exclusions plus the 7z file
           7z a -tzip "spruceV${{ steps.get_version.outputs.version }}.zip" * .tmp_update \
             -xr!.git \
             -xr!.github \
@@ -57,7 +57,8 @@ jobs:
             -x!.gitattributes \
             -x!create_spruce_release.bat \
             -x!create_spruce_release.sh \
-            -x!commit_hash.txt
+            -x!commit_hash.txt \
+            -x!"spruceV${{ steps.get_version.outputs.version }}.7z"
           7z u "spruceV${{ steps.get_version.outputs.version }}.zip" commit_hash.txt
 
       - name: Create Release
