Add gearcoleco core and expose as option for Colecovision emulation

--- a/Emu/COLECO/config.json
+++ b/Emu/COLECO/config.json
@@ -16,6 +16,10 @@
       "launch": "/mnt/SDCARD/Emu/.emu_setup/aleatorio.sh"
     },
     {
+      "name": "Emu Core: (✓BLUEMSX)-gearcoleco",
+      "launch": "/mnt/SDCARD/Emu/.emu_setup/core/gearcoleco.sh"
+    },
+    {
       "name": "CPU Mode: (✓SMART)-Performance-Overclock",
       "launch": "/mnt/SDCARD/Emu/.emu_setup/speed/Performance.sh"
     },
