add advanced setting to disable or change percentage at which low power warning fires

--- a/spruce/settings/spruce.cfg
+++ b/spruce/settings/spruce.cfg
@@ -5,8 +5,10 @@ dropbear=1
 enableNetworkTimeSync=1
 expertRA=1
 fake08_allow_png=1
+hold_home=Game Switcher
 idlemon_in_game=30m
 idlemon_in_menu=2m
+low_power_warning_percent=4
 maxGamesInGS=10
 pico8_control_profile=Racing
 pico8_stretch=1
@@ -21,4 +23,3 @@ skip_shutdown_confirm=1
 sleep_powerdown=5m
 syncthing=1
 tap_home=In-game menu
-hold_home=Game Switcher
