--- a/RetroArch/retroarch.cfg
+++ b/RetroArch/retroarch.cfg
@@ -345,7 +345,7 @@ input_overlay_y_separation_landscape = "0.000000"
 input_overlay_y_separation_portrait = "0.000000"
 input_pause_toggle = "nul"
 input_pause_toggle_axis = "nul"
-input_pause_toggle_btn = "nul"
+input_pause_toggle_btn = "10"
 input_pause_toggle_mbtn = "nul"
 input_play_replay = "nul"
 input_play_replay_axis = "nul"
