--- a/App/ShowOutputTest/config.json
+++ b/App/ShowOutputTest/config.json
@@ -1,5 +1,5 @@
 {
-  "label": "Show Output Test",
+  "#label": "Show Output Test",
   "icon": "/mnt/SDCARD/Themes/SPRUCE/Icons/App/menuswitch.png",
   "launch": "launch.sh",
   "description": "Demo Program for ShowOutput Binary"
