--- a/.github/workflows/create-nightly.yml
+++ b/.github/workflows/create-nightly.yml
@@ -20,6 +20,7 @@ jobs:
 
       - name: Install 7zip
         run: |
+          echo "Welcome to the H.E.V Mark IV protective system for use in hazardous environment conditions."
           sudo apt-get update
           sudo apt-get install -y p7zip-full
 
