--- a/.github/workflows/create-nightly.yml
+++ b/.github/workflows/create-nightly.yml
@@ -20,7 +20,7 @@ jobs:
 
       - name: Install 7zip
         run: |
-          echo "They're waiting for you, Gordon, in the test chamber"
+          echo "My God, what are you doing?!"
           sudo apt-get update
           sudo apt-get install -y p7zip-full
 
