Add setting item "Disable joystick"

--- a/spruce/settings/spruce.cfg
+++ b/spruce/settings/spruce.cfg
@@ -1,6 +1,7 @@
 alwaysUseBoxartInGS=1
 disableNetworkServicesInGame=1
 disableWifiInGame=1
+disableJoystick=1
 dropbear=1
 enableNetworkTimeSync=1
 expertRA=1
