--- a/App/-OTA/config.json
+++ b/App/-OTA/config.json
@@ -1,5 +1,5 @@
 {
-  "label": "Check for Updates",
+  "label": "OTA Updater",
   "icon": "/mnt/SDCARD/Themes/SPRUCE/Icons/App/updater.png",
   "launch": "launch.sh",
   "description": "Check for updates over Wi-Fi"
