--- a/spruce/settings/spruce.cfg
+++ b/spruce/settings/spruce.cfg
@@ -2,6 +2,7 @@ alwaysUseBoxartInGS=1
 disableNetworkServicesInGame=1
 disableWifiInGame=1
 dropbear=1
+checkForUpdates=0
 enableNetworkTimeSync=1
 expertRA=1
 fake08_allow_png=1
