--- a/.github/workflows/create-nightly.yml
+++ b/.github/workflows/create-nightly.yml
@@ -97,38 +97,52 @@ jobs:
           draft: false
           prerelease: false
 
-      - name: Update OTA file
+      - name: Update OTA files
         if: success() && steps.check_commits.outcome == 'success'
         env:
           GH_TOKEN: ${{ secrets.PAT_TOKEN }}
         run: |
-          # Clone the OTA repository
+          # Clone both repositories
           git clone https://github.com/spruceUI/spruceui.github.io.git ota_repo
+          git clone https://github.com/spruceUI/spruceSource.git source_repo
           
           # Calculate file info
           CHECKSUM=$(md5sum "spruceV${{ steps.get_version.outputs.version }}.7z" | cut -d' ' -f1)
           SIZE_MB=$(ls -l --block-size=1M "spruceV${{ steps.get_version.outputs.version }}.7z" | awk '{print $5}')
           
-          # Read existing file content
-          CONTENT=$(cat ota_repo/OTA/spruce)
+          # Function to update OTA file
+          update_ota_file() {
+            local file="$1"
+            local content
+            content=$(cat "$file")
+            
+            echo "$content" | grep -v "^NIGHTLY_" > "$file"
+            echo "NIGHTLY_VERSION=${{ steps.get_version.outputs.version }}" >> "$file"
+            echo "NIGHTLY_CHECKSUM=$CHECKSUM" >> "$file"
+            echo "NIGHTLY_SIZE_IN_MB=$SIZE_MB" >> "$file"
+            echo "NIGHTLY_LINK=https://github.com/spruceUI/spruceOSNightlies/releases/download/v${{ steps.get_version.outputs.version }}/spruceV${{ steps.get_version.outputs.version }}.7z" >> "$file"
+            echo "NIGHTLY_INFO=https://github.com/spruceUI/spruceOSNightlies/releases/tag/v${{ steps.get_version.outputs.version }}" >> "$file"
+          }
           
-          # Update nightly information while preserving other content
-          echo "$CONTENT" | grep -v "^NIGHTLY_" > ota_repo/OTA/spruce
-          echo "NIGHTLY_VERSION=${{ steps.get_version.outputs.version }}" >> ota_repo/OTA/spruce
-          echo "NIGHTLY_CHECKSUM=$CHECKSUM" >> ota_repo/OTA/spruce
-          echo "NIGHTLY_SIZE_IN_MB=$SIZE_MB" >> ota_repo/OTA/spruce
-          echo "NIGHTLY_LINK=https://github.com/spruceUI/spruceOSNightlies/releases/download/v${{ steps.get_version.outputs.version }}/spruceV${{ steps.get_version.outputs.version }}.7z" >> ota_repo/OTA/spruce
-          echo "NIGHTLY_INFO=https://github.com/spruceUI/spruceOSNightlies/releases/tag/v${{ steps.get_version.outputs.version }}" >> ota_repo/OTA/spruce
+          # Update both OTA files
+          update_ota_file "ota_repo/OTA/spruce"
+          update_ota_file "source_repo/OTA/spruce"
           
-          # Configure git
+          # Update primary OTA repo
           cd ota_repo
           git config user.name "GitHub Actions Bot"
           git config user.email "actions@github.com"
-          
-          # Commit and push changes
           git add OTA/spruce
           git commit -m "Update nightly release to ${{ steps.get_version.outputs.version }}"
           git push https://x-access-token:${{ secrets.PAT_TOKEN }}@github.com/spruceUI/spruceui.github.io.git main
+          
+          # Update backup OTA repo
+          cd ../source_repo
+          git config user.name "GitHub Actions Bot"
+          git config user.email "actions@github.com"
+          git add OTA/spruce
+          git commit -m "Update nightly release to ${{ steps.get_version.outputs.version }}"
+          git push https://x-access-token:${{ secrets.PAT_TOKEN }}@github.com/spruceUI/spruceSource.git main
 
       - name: Delete old releases
         if: success() && steps.check_commits.outcome == 'success'
