--- a/Emu/MSX/config.json
+++ b/Emu/MSX/config.json
@@ -16,6 +16,10 @@
       "launch": "/mnt/SDCARD/Emu/.emu_setup/aleatorio.sh"
     },
     {
+      "name": "Emu Core: (✓BLUEMSX)-fmsx",
+      "launch": "/mnt/SDCARD/Emu/.emu_setup/core/fmsx.sh"
+    },
+    {
       "name": "CPU Mode: (✓SMART)-Performance-Overclock",
       "launch": "/mnt/SDCARD/Emu/.emu_setup/speed/Performance.sh"
     },
