--- a/Emu/SEGASGONE/config.json
+++ b/Emu/SEGASGONE/config.json
@@ -16,6 +16,10 @@
       "launch": "/mnt/SDCARD/Emu/.emu_setup/aleatorio.sh"
     },
     {
+      "name": "Emu Core: (✓GENESIS+GX)-bluemsx-gearsystem",
+      "launch": "/mnt/SDCARD/Emu/.emu_setup/core/bluemsx.sh"
+    },
+    {
       "name": "CPU Mode: (✓SMART)-Performance-Overclock",
       "launch": "/mnt/SDCARD/Emu/.emu_setup/speed/Performance.sh"
     },
