feat(multipass): add marking hidden network in multipass

--- a/multipass.cfg
+++ b/multipass.cfg
@@ -18,15 +18,20 @@
 
 ID_1=""
 PW_1=""
+HIDDEN_1=""
 
 ID_2=""
 PW_2=""
+HIDDEN_2=""
 
 ID_3=""
 PW_3=""
+HIDDEN_3=""
 
 ID_4=""
 PW_4=""
+HIDDEN_4=""
 
 ID_5=""
 PW_5=""
+HIDDEN_5=""
