add N64 controller profile setting - classic (with R2 to toggle C button mode), action (with C buttons mapped to individual buttons) or custom (user defined, but starts out same as classic)

--- a/spruce/settings/spruce.cfg
+++ b/spruce/settings/spruce.cfg
@@ -13,6 +13,7 @@ idlemon_in_game=30m
 idlemon_in_menu=2m
 low_power_warning_percent=4
 maxGamesInGS=10
+n64_control_profile=Classic
 pico8_control_profile=Racing
 pico8_stretch=1
 recentsTile=1
