--- a/Emu/DC/config.json
+++ b/Emu/DC/config.json
@@ -9,7 +9,7 @@
   "useswap": 1,
   "shortname": 0,
   "hidebios": 1,
-  "extlist": "chd|cdi|gdi|cue|iso",
+  "extlist": "chd|cdi|gdi|cue|iso|m3u",
   "launchlist": [
     {
       "name": "Jump to random Dreamcast game",
