--- a/App/ThemePacker/config.json
+++ b/App/ThemePacker/config.json
@@ -1,5 +1,5 @@
 {
-	"@label":        "Theme Packer",
+	"#label":        "Theme Packer",
 	"icon":	        "/mnt/SDCARD/Themes/SPRUCE/Icons/App/emufresh.png",
 	"launch":       "launch.sh",
 	"description":  "Pack themes into 7z archives"
