--- a/multipass.cfg
+++ b/multipass.cfg
@@ -5,7 +5,7 @@
 # This file provides an optional way to store up to 5 different WiFi networks
 # on your A30. Type the SSID, password and hidden status of your desired networks inside the
 # quotation marks in each parameter below, starting with ID_1, PW_1 and HIDDEN_1.
-# HIDDEN_x parameter is "1" for hidden networks and "0" for visible networks.
+# HIDDEN_x parameter is "1" for hidden networks and "0" for visible networks and this parameter is optional.
 #
 # On your next boot, the A30 will interpret this file and convert it into an
 # actual WiFi configuration. Then, this file will delete itself for security
