fix trailing comma breaking json

--- a/App/GameNursery/config.json
+++ b/App/GameNursery/config.json
@@ -2,5 +2,5 @@
   "label": "Game Nursery",
   "icon": "/mnt/SDCARD/Themes/SPRUCE/icons/App/iconfresh.png",
   "launch": "launch.sh",
-  "description": "Download free games directly to your A30",
+  "description": "Download free games directly to your A30"
 }
