Added Expert Settings mode

--- a/spruce/settings/spruce.cfg
+++ b/spruce/settings/spruce.cfg
@@ -7,6 +7,7 @@ dropbear=1
 checkForUpdates=0
 enableNetworkTimeSync=1
 expertRA=1
+expert_settings=1
 fake08_allow_png=1
 hold_home=Game Switcher
 idlemon_in_game=30m
