Added new item to launchlist
Added new item to launchlist to launch "add_favourite.sh"

--- a/Emu/GBA/config.json
+++ b/Emu/GBA/config.json
@@ -12,6 +12,10 @@
   "extlist": "gba|zip|7z|bin",
   "launchlist": [
     {
+      "name": "Add to Favorites",
+      "launch": "/mnt/SDCARD/Emu/.emu_setup/add_favourite.sh"
+    },
+    {
       "name": "Jump to random GameBoy Advance game",
       "launch": "/mnt/SDCARD/Emu/.emu_setup/aleatorio.sh"
     },
