--- a/Emu/AMIGA/config.json
+++ b/Emu/AMIGA/config.json
@@ -12,6 +12,10 @@
   "extlist": "zip|7z|adf|adz|dms|fdi|ipf|hdf|hdz|lha|slave|info|cue|ccd|nrg|mds|iso|chd|uae|m3u|rp9",
   "launchlist": [
     {
+      "name": "Add to Favorites",
+      "launch": "/mnt/SDCARD/Emu/.emu_setup/add_favourite.sh"
+    },
+    {
       "name": "Jump to random Amiga game",
       "launch": "/mnt/SDCARD/Emu/.emu_setup/aleatorio.sh"
     },
