--- a/Emu/MAME2003PLUS/config.json
+++ b/Emu/MAME2003PLUS/config.json
@@ -12,6 +12,10 @@
   "extlist": "zip",
   "launchlist": [
     {
+      "name": "Add to Favorites",
+      "launch": "/mnt/SDCARD/Emu/.emu_setup/add_favourite.sh"
+    },
+    {
       "name": "Jump to random MAME game",
       "launch": "/mnt/SDCARD/Emu/.emu_setup/aleatorio.sh"
     },
