--- a/Emu/NEOCD/config.json
+++ b/Emu/NEOCD/config.json
@@ -12,6 +12,10 @@
   "extlist": "cue|chd|m3u",
   "launchlist": [
     {
+      "name": "Add to Favorites",
+      "launch": "/mnt/SDCARD/Emu/.emu_setup/add_favourite.sh"
+    },
+    {
       "name": "Jump to random Neo CD game",
       "launch": "/mnt/SDCARD/Emu/.emu_setup/aleatorio.sh"
     },
