--- a/Emu/ODYSSEY/config.json
+++ b/Emu/ODYSSEY/config.json
@@ -12,6 +12,10 @@
   "extlist": "bin|zip|7z",
   "launchlist": [
     {
+      "name": "Add to Favorites",
+      "launch": "/mnt/SDCARD/Emu/.emu_setup/add_favourite.sh"
+    },
+    {
       "name": "Jump to random Odyssey game",
       "launch": "/mnt/SDCARD/Emu/.emu_setup/aleatorio.sh"
     },
