--- a/Emu/PICO8/config.json
+++ b/Emu/PICO8/config.json
@@ -12,6 +12,10 @@
   "extlist": "p8|png|splore",
   "launchlist": [
     {
+      "name": "Add to Favorites",
+      "launch": "/mnt/SDCARD/Emu/.emu_setup/add_favourite.sh"
+    },
+    {
       "name": "Jump to random Pico-8 game",
       "launch": "/mnt/SDCARD/Emu/.emu_setup/aleatorio.sh"
     },
