--- a/Emu/POKE/config.json
+++ b/Emu/POKE/config.json
@@ -12,6 +12,10 @@
   "extlist": "min|zip|7z",
   "launchlist": [
     {
+      "name": "Add to Favorites",
+      "launch": "/mnt/SDCARD/Emu/.emu_setup/add_favourite.sh"
+    },
+    {
       "name": "Jump to random Pokemon Mini game",
       "launch": "/mnt/SDCARD/Emu/.emu_setup/aleatorio.sh"
     },
