--- a/Emu/TIC/config.json
+++ b/Emu/TIC/config.json
@@ -12,6 +12,10 @@
   "extlist": "tic|zip|7z|fd|sap|k7|m7|rom",
   "launchlist": [
     {
+      "name": "Add to Favorites",
+      "launch": "/mnt/SDCARD/Emu/.emu_setup/add_favourite.sh"
+    },
+    {
       "name": "Jump to random Tic-80 game",
       "launch": "/mnt/SDCARD/Emu/.emu_setup/aleatorio.sh"
     },
