hook up Saturn emu

--- a/Emu/SS/config.json
+++ b/Emu/SS/config.json
@@ -1,26 +1,27 @@
 {
-"label":"Saturn",
-"icontop":"../_theme/ic-saturn.png",
-"icon":"",
-"iconsel":"",
-"background":"../_theme/bg-saturn.png",
-"themecolor":"E4007F",
-"effectsh":"effect.sh",
-"launch":"launch.sh",
-"rompath":"../../Roms/SS",
-"imgpath":"../../Roms/SS/Imgs",
+"label": "Saturn",
+"icontop": "../_theme/ic-saturn.png",
+"icon": "",
+"iconsel": "",
+"background": "../_theme/bg-saturn.png",
+"themecolor": "E4007F",
+"effectsh": "effect.sh",
+"launch": "launch.sh",
+"rompath": "../../Roms/SS",
+"imgpath": "../../Roms/SS/Imgs",
 "gamelist": "../../Roms/SS/miyoogamelist.xml",
-"useswap":1,
-"shortname":0,
-"hidebios":1,
+"useswap": 1,
+"shortname": 0,
+"hidebios": 1,
+"extlist": "chd|zip|mds|ccd|iso|cue",
 "launchlist": [
     {
       "name": "Jump to random Saturn game",
       "launch": "/mnt/SDCARD/Emu/.emu_setup/aleatorio.sh"
     },
     {
-      "name": "CPU Mode: (✓SMART)-Performance-Overclock",
-      "launch": "/mnt/SDCARD/Emu/.emu_setup/speed/Performance.sh"
+      "name": "CPU Mode: (✓PERFORMANCE)-Overclock",
+      "launch": "/mnt/SDCARD/Emu/.emu_setup/speed/Overclock.sh"
     },
     {
       "name": "Save current launch settings as per-game override",
