--- a/Emu/AMIGA/config.json
+++ b/Emu/AMIGA/config.json
@@ -17,7 +17,7 @@
     },
     {
       "name": "Emu Core: (✓UAE4ARM)-puae2021",
-      "launch": "/mnt/SDCARD/Emu/.emu_setup/core/puae2021.sh"
+      "launch": "/mnt/SDCARD/Emu/.emu_setup/core_switch.sh"
     },
     {
       "name": "CPU Mode: (✓SMART)-Performance-Overclock",
