--- a/Emu/CPC/config.json
+++ b/Emu/CPC/config.json
@@ -17,7 +17,7 @@
     },
     {
       "name": "Emu Core: (✓CAP32)-crocods",
-      "launch": "/mnt/SDCARD/Emu/.emu_setup/core/crocods.sh"
+      "launch": "/mnt/SDCARD/Emu/.emu_setup/core_switch.sh"
     },
     {
       "name": "CPU Mode: (✓SMART)-Performance-Overclock",
