--- a/Emu/DC/config.json
+++ b/Emu/DC/config.json
@@ -17,7 +17,7 @@
     },
     {
       "name": "Emu Core: (✓FCXTREME)-flycast",
-      "launch": "/mnt/SDCARD/Emu/.emu_setup/core/flycast.sh"
+      "launch": "/mnt/SDCARD/Emu/.emu_setup/core_switch.sh"
     },
     {
       "name": "CPU Mode: (✓PERFORMANCE)-Overclock",
