--- a/Emu/FC/config.json
+++ b/Emu/FC/config.json
@@ -17,7 +17,7 @@
     },
     {
       "name": "Emu Core: (✓FCEUMM)-nestopia-quicknes",
-      "launch": "/mnt/SDCARD/Emu/.emu_setup/core/nestopia.sh"
+      "launch": "/mnt/SDCARD/Emu/.emu_setup/core_switch.sh"
     },
     {
       "name": "CPU Mode: (✓SMART)-Performance-Overclock",
