--- a/Emu/GBA/config.json
+++ b/Emu/GBA/config.json
@@ -17,7 +17,7 @@
     },
     {
       "name": "Emu Core: (✓MGBA)-gpsp",
-      "launch": "/mnt/SDCARD/Emu/.emu_setup/core/gpsp.sh"
+      "launch": "/mnt/SDCARD/Emu/.emu_setup/core_switch.sh"
     },
     {
       "name": "CPU Mode: (✓SMART)-Performance-Overclock",
