--- a/Emu/GBC/config.json
+++ b/Emu/GBC/config.json
@@ -17,7 +17,7 @@
     },
     {
       "name": "Emu Core: (✓GAMBATTE)-mgba",
-      "launch": "/mnt/SDCARD/Emu/.emu_setup/core/mgba.sh"
+      "launch": "/mnt/SDCARD/Emu/.emu_setup/core_switch.sh"
     },
     {
       "name": "CPU Mode: (✓SMART)-Performance-Overclock",
