--- a/Emu/LYNX/config.json
+++ b/Emu/LYNX/config.json
@@ -17,7 +17,7 @@
     },
     {
       "name": "Emu Core: (✓HANDY)-mednafen",
-      "launch": "/mnt/SDCARD/Emu/.emu_setup/core/mednafen_lynx.sh"
+      "launch": "/mnt/SDCARD/Emu/.emu_setup/core_switch.sh"
     },
     {
       "name": "CPU Mode: (✓SMART)-Performance-Overclock",
