--- a/Emu/MSX/config.json
+++ b/Emu/MSX/config.json
@@ -17,7 +17,7 @@
     },
     {
       "name": "Emu Core: (✓BLUEMSX)-fmsx",
-      "launch": "/mnt/SDCARD/Emu/.emu_setup/core/fmsx.sh"
+      "launch": "/mnt/SDCARD/Emu/.emu_setup/core_switch.sh"
     },
     {
       "name": "CPU Mode: (✓SMART)-Performance-Overclock",
