--- a/Emu/NEOGEO/config.json
+++ b/Emu/NEOGEO/config.json
@@ -17,7 +17,7 @@
     },
     {
       "name": "Emu Core: (✓FBALPHA2012)-fbneo",
-      "launch": "/mnt/SDCARD/Emu/.emu_setup/core/fbneo.sh"
+      "launch": "/mnt/SDCARD/Emu/.emu_setup/core_switch.sh"
     },
     {
       "name": "CPU Mode: (✓SMART)-Performance-Overclock",
