--- a/Emu/NGP/config.json
+++ b/Emu/NGP/config.json
@@ -17,7 +17,7 @@
     },
     {
       "name": "Emu Core: (✓MEDNAFEN)-race",
-      "launch": "/mnt/SDCARD/Emu/.emu_setup/core/race.sh"
+      "launch": "/mnt/SDCARD/Emu/.emu_setup/core_switch.sh"
     },
     {
       "name": "CPU Mode: (✓SMART)-Performance-Overclock",
