--- a/Emu/SEGACD/config.json
+++ b/Emu/SEGACD/config.json
@@ -17,7 +17,7 @@
     },
     {
       "name": "Emu Core: (✓PICODRIVE)-genesis+gx",
-      "launch": "/mnt/SDCARD/Emu/.emu_setup/core/genesis_plus_gx.sh"
+      "launch": "/mnt/SDCARD/Emu/.emu_setup/core_switch.sh"
     },
     {
       "name": "CPU Mode: (✓SMART)-Performance-Overclock",
