--- a/Emu/SFC/config.json
+++ b/Emu/SFC/config.json
@@ -17,7 +17,7 @@
     },
     {
       "name": "Emu Core: (✓CHIMERASNES)-supafaust-snes9x",
-      "launch": "/mnt/SDCARD/Emu/.emu_setup/core/mednafen_supafaust.sh"
+      "launch": "/mnt/SDCARD/Emu/.emu_setup/core_switch.sh"
     },
     {
       "name": "CPU Mode: (✓SMART)-Performance-Overclock",
