combine cpu speed X menu scripts into one for easier maintenance moving forward

--- a/Emu/DC/config.json
+++ b/Emu/DC/config.json
@@ -21,7 +21,7 @@
     },
     {
       "name": "CPU Mode: (✓PERFORMANCE)-Overclock",
-      "launch": "/mnt/SDCARD/Emu/.emu_setup/speed/Overclock.sh"
+      "launch": "/mnt/SDCARD/Emu/.emu_setup/cpu_switch.sh"
     },
     {
       "name": "Generate M3U playlists for multi-disc games",
