--- a/Emu/PS/config.json
+++ b/Emu/PS/config.json
@@ -21,7 +21,7 @@
     },
     {
       "name": "CPU Mode: (✓SMART)-Performance-Overclock",
-      "launch": "/mnt/SDCARD/Emu/.emu_setup/speed/Performance.sh"
+      "launch": "/mnt/SDCARD/Emu/.emu_setup/cpu_switch.sh"
     },
     {
       "name": "Generate M3U playlists for multi-disc games",
