convert brick apps to use icontop field

--- a/App/-FirmwareUpdate-/config.json
+++ b/App/-FirmwareUpdate-/config.json
@@ -1,5 +1,6 @@
 {
   "#label": "A Firmware Update Is Available",
+  "icontop": "/mnt/SDCARD/Themes/SPRUCE/icontop/App/firmwareupdate.png",
   "icon": "/mnt/SDCARD/Themes/SPRUCE/icons/App/firmwareupdate.png",
   "launch": "launch.sh",
   "description": "Run this to get the latest fixes"
