--- a/App/BoxartScraper/config.json
+++ b/App/BoxartScraper/config.json
@@ -1,5 +1,6 @@
 {
   "label": "Boxart Scraper",
+  "icontop": "/mnt/SDCARD/Themes/SPRUCE/icontop/App/scraper.png",
   "icon": "/mnt/SDCARD/Themes/SPRUCE/icons/App/scraper.png",
   "launch": "launch.sh",
   "description": "Scrape game boxart"
