--- a/App/RetroArch/config.json
+++ b/App/RetroArch/config.json
@@ -1,5 +1,6 @@
 {
   "label": "RetroArch",
+  "icontop": "/mnt/SDCARD/Themes/SPRUCE/icontop/App/retroarch.png",
   "icon": "/mnt/SDCARD/Themes/SPRUCE/icons/App/retroarch.png",
   "launch": "launch.sh",
   "description": "Core and game configuration"
