--- a/App/GameNursery/config.json
+++ b/App/GameNursery/config.json
@@ -1,5 +1,6 @@
 {
   "label": "Game Nursery",
+  "icontop": "/mnt/SDCARD/Themes/SPRUCE/icontop/App/iconfresh.png",
   "icon": "/mnt/SDCARD/Themes/SPRUCE/icons/App/iconfresh.png",
   "launch": "launch.sh",
   "description": "Download free games directly to your A30"
