--- a/App/MiyooGamelist/config.json
+++ b/App/MiyooGamelist/config.json
@@ -1,5 +1,6 @@
 {
   "#label": "Miyoo Gamelist",
+  "icontop": "/mnt/SDCARD/Themes/SPRUCE/icontop/App/gamelist.png",
   "icon": "/mnt/SDCARD/Themes/SPRUCE/icons/App/gamelist.png",
   "launch": "launch.sh",
   "description": "Clean up displayed rom names"
