--- a/App/RandomGame/config.json
+++ b/App/RandomGame/config.json
@@ -1,5 +1,6 @@
 {
   "label": "Random Game",
+  "icontop": "/mnt/SDCARD/Themes/SPRUCE/icontop/App/random.png",
   "icon": "/mnt/SDCARD/Themes/SPRUCE/icons/App/random.png",
   "launch": "launch.sh",
   "description": "Launch a random game"
