--- a/App/ShowOutputTest/config.json
+++ b/App/ShowOutputTest/config.json
@@ -1,5 +1,6 @@
 {
   "#label": "Show Output Test",
+  "icontop": "/mnt/SDCARD/Themes/SPRUCE/icontop/App/menuswitch.png",
   "icon": "/mnt/SDCARD/Themes/SPRUCE/icons/App/menuswitch.png",
   "launch": "launch.sh",
   "description": "Demo Program for ShowOutput Binary"
