--- a/App/ThemePacker/config.json
+++ b/App/ThemePacker/config.json
@@ -1,5 +1,6 @@
 {
 	"#label":        "Theme Packer",
+	"icontop":	    "/mnt/SDCARD/Themes/SPRUCE/icontop/App/emufresh.png",
 	"icon":	        "/mnt/SDCARD/Themes/SPRUCE/icons/App/emufresh.png",
 	"launch":       "launch.sh",
 	"description":  "Pack themes into 7z archives"
