--- a/App/spruceBackup/config.json
+++ b/App/spruceBackup/config.json
@@ -1,5 +1,6 @@
 {
 	"#label":        "Spruce Backup",
+	"icontop":      "/mnt/SDCARD/Themes/SPRUCE/icontop/App/backup.png",
 	"icon":	        "/mnt/SDCARD/Themes/SPRUCE/icons/App/backup.png",
 	"launch":       "launch.sh",
 	"description":  "Save your configs and settings"
