--- a/App/spruceRestore/config.json
+++ b/App/spruceRestore/config.json
@@ -1,5 +1,6 @@
 {
 	"#label":        "Spruce Restore",
+	"icontop":	    "/mnt/SDCARD/Themes/SPRUCE/icontop/App/restore.png",
 	"icon":	        "/mnt/SDCARD/Themes/SPRUCE/icons/App/restore.png",
 	"launch":       "launch.sh",
 	"description":  "Restore configs & settings from backup"
