--- a/Emu/SATURN/config.json
+++ b/Emu/SATURN/config.json
@@ -7,9 +7,9 @@
 "themecolor": "E4007F",
 "effectsh": "effect.sh",
 "launch": "launch.sh",
-"rompath": "../../Roms/SS",
-"imgpath": "../../Roms/SS/Imgs",
-"gamelist": "../../Roms/SS/miyoogamelist.xml",
+"rompath": "../../Roms/SATURN",
+"imgpath": "../../Roms/SATURN/Imgs",
+"gamelist": "../../Roms/SATURN/miyoogamelist.xml",
 "useswap": 1,
 "shortname": 0,
 "hidebios": 1,
