--- a/Emu/SATURN/config.json
+++ b/Emu/SATURN/config.json
@@ -6,7 +6,7 @@
 "background": "../_theme/bg-saturn.png",
 "themecolor": "E4007F",
 "effectsh": "effect.sh",
-"launch": "launch.sh",
+"launch": "../.emu_setup/standard_launch.sh",
 "rompath": "../../Roms/SATURN",
 "imgpath": "../../Roms/SATURN/Imgs",
 "gamelist": "../../Roms/SATURN/miyoogamelist.xml",
